# jheapusage

./: Cargo.toml  InfiniteApp.java  LICENSE  README.md  build.rs
article/: container_model.puml  memory_layout.cpp
article/c4-models/: container.puml  jheapusage_component.puml
docker/dev/: Dockerfile
otlp/: .env  docker-compose.yaml
otlp/grafana/: grafana.ini
otlp/grafana/provisioning/dashboards/demo/: java-memory.json  jvm.json
otlp/otel-collector/: otelcol-config.yml
src/: ebpf.rs  errors.rs  events.rs  handlers.rs  isolation.rs  logger.rs  main.rs  otlp.rs  utils.rs
src/ebpf/: .clang-format  .clang-format-ignore  hotspot_usdt.bpf.c  hotspot_usdt.h  hotspot_usdt.skel.rs  jvm.bpf.c  jvm.h  jvm.skel.rs
