[package]
name = "jheapusage"
version = "0.1.2"
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
license = "MIT License"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1"
libbpf-rs = "0.24.8"
libc = "0.2"
object = "0.36.7"
opentelemetry = "0.27.1"
opentelemetry-otlp = {  version = "0.27.0", features = ["http-json", "hyper-client"] }
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
plain = "0.2"
thiserror = "2"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber= { version = "0.3", features = ["env-filter"] }

[build-dependencies]
libbpf-cargo = "0.24.8"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[profile.release]
debug = true